[package]
name = "lispy"
version = "0.1.0"
authors = ["Rafał Galczak <r.galczak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lispy"

[lib]
name = "lispylib"

[profile.release]
debug = true
lto = "fat"
panic = "abort"

[dependencies]
regex = "1.5"

[features]
default_features = []
hash_set = []
